Linux: Improve avatar button for themed browser windows.

1. Draw fill color/image on avatar button. Some themes use a color,
   some have an image, or they can have both.
2. Make generic avatar icon white with a grey outline, just like the
   caption button icons.

BUG=722595

Change-Id: Ie05f2de9e677be2f04190ef8043e62bc4c1a7d73
Reviewed-on: https://chromium-review.googlesource.com/514448
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#475013}
Former-commit-id: 0b5abf2881817f9cba31ac3d6ba7d50d01924d78